test/simple/ill-typed/even_to_odd.caprice
(* TEST
  include refutable;
*)


let isEven x = (x % 2) == 0

let isOdd x = (x % 2) <> 0

let e2o (f : { i : int | isEven i } -> { j : int | isEven j }) : { i : int | isOdd i } -> { j : int | isOdd j } =
  fun n -> (f (n + 1)) (* ERROR: need to add one to the result to make sure it is even, or return type should be even *)
